<resources>
    <string name="app_name">MachineStock</string>
    <string name="no_file">No image file</string>
    <string name="status">Estado: %1$s</string>
    <string name="owner1">Socio 1</string>
    <string name="owner2">Socio 2</string>
    <string name="length_and_width">Medidas: %1$s  mm x %2$s mm</string>
    <string name="length_and_weight">Medidas: %1$s mm x %2$s tns</string>
    <string name="features">Medidas: %1$s </string>
    <string name="brand">Marca: %1$s</string>
    <string name="type">Tipo: %1$s</string>
    <string name="location">Depósito: %1$s</string>
    <string name="last_edit">Última edición: %1$s</string>
    <string name="inside_number">Código: %1$s</string>
    <string name="save_action">Guardar</string>
    <string name="share_action">Compartir</string>

    <!--Share templates-->
    <string name="index_card_title"><big>FICHA TECNICA\n</big>--------------</string>
    <string name="index_card_product"><b>%1$s</b></string>
    <string name="index_card_brand">\n<b>Marca:</b> %1$s</string>
    <string name="index_card_features">\n- %1$s</string>
    <string name="index_card_other_features">\n- %1$s</string>
    <string name="index_card_type">\n- %1$s</string>
    <string name="index_card_price">\n- Precio: %1$s</string>

    <string-array name="type_options">
        <item>Mecánica</item>
        <item>Hidraúlica</item>
        <item>Neumática</item>
        <item>No especifica</item>
    </string-array>

    <!--TODO Cambiar a socios originales-->
    <string-array name="owner_options">
        <item>Socio 1</item>
        <item>Socio 2</item>
        <item>Sociedad</item>
    </string-array>

    <string-array name="status_options">
        <item>NO INFORMADO</item>
        <item>A REPARAR</item>
        <item>DISPONIBLE</item>
        <item>RESERVADA</item>
        <item>SEÑADA</item>
        <item>VENDIDA</item>
        <item>RETIRADA</item>
    </string-array>

    <string-array name="product_options">
        <item>GUILLOTINA</item>
        <item>PLEGADORA</item>
        <item>BALANCIN</item>
        <item>TORNO</item>
        <item>LIMADORA</item>
        <item>CILINDRO</item>
        <item>COMPRESOR</item>
        <item>FRESADORA</item>
        <item>PESTAÑADORA</item>
        <item>CREADORA</item>
        <item>PLASMA</item>
        <item>SERRUCHO</item>
        <item>SOLDADURA</item>
        <item>HIDROCOPIADOR</item>
        <item>OTROS</item>
    </string-array>

    <string-array name="brand_options">
        <item>ARRIGONI</item>
        <item>ATENA</item>
        <item>ATLAS</item>
        <item>BISTCHIN</item>
        <item>CASANOVA</item>
        <item>CENA</item>
        <item>DAISA</item>
        <item>DIAMINT</item>
        <item>DRO ITALPLEG</item>
        <item>DUUB</item>
        <item>E. PINO</item>
        <item>ERCOR</item>
        <item>FHIAM 14</item>
        <item>NAHUEL</item>
        <item>NEBIOLO</item>
        <item>NOVA</item>
        <item>NOVA PELIS</item>
        <item>OLIMAG</item>
        <item>PANTHER</item>
        <item>PIA</item>
        <item>PRINCIPE</item>
        <item>REMAC</item>
        <item>SDB</item>
        <item>YUNAN</item>
    </string-array>

    <string-array name="location_options">
        <item>Depósito 1</item>
        <item>Depósito 2</item>
        <item>Depósito 3</item>
        <item>Depósito 4</item>
        <item>A definir</item>
    </string-array>

    <!-- Messages -->
    <string name="blank_item">Falta completar características básicas</string>
    <string name="invalid_owner">El porcentaje total no debe superar 100</string>
    <string name="duplicate_inside_number">El código interno ya existe</string>
    <string name="succes_upload_image">La imagen ha sido subida al servidor</string>
    <string name="fail_upload_image">No se ha podido subir la imagen, intentelo más tarde</string>
    <string name="fail_update_database">Error al actualizar la base de datos, intentelo más tarde</string>

    <!-- Hint Text -->
    <string name="item_product_req">Máquina</string>
    <string name="inside_number_req">Código</string>
    <string name="item_length_req">Largo *</string>
    <string name="item_width_guillotina_req">Espesor *</string>
    <string name="item_width_torno_req">Volteo *</string>
    <string name="item_weight_req">Tonelaje *</string>
    <string name="item_volt_req">Voltaje</string>
    <string name="item_hp_req">HP *</string>
    <string name="item_pulg_req">Ancho en pulgadas *</string>
    <string name="item_mig_req">En mig *</string>
    <string name="item_price_req">Precio</string>
    <string name="item_brand_req">Marca</string>
    <string name="item_location_req">Depósito</string>
    <string name="item_type_req">Tipo</string>
    <string name="item_status_req">Estado</string>
    <string name="item_owner2_req">Socio 2 %</string>
    <string name="item_owner1_req">Socio 1 %</string>
    <string name="item_feature3_req">Otras características</string>
    <string name="item_observations_req">Observaciones</string>

    <!-- Content Description -->
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add Item</string>
    <string name="currency_symbol">$</string>
    <string name="dialog_new_product_title">Nuevo ingreso:</string>
    <string name="dialog_new_status">Selecciona estado:</string>
    <string name="filter_ok">Listo</string>
    <string name="filter_cancel">Cancelar</string>
    <string name="shared_ownership">Sociedad</string>
    <string name="filter_title">FILTRAR</string>
    <string name="search_menu">buscar</string>
    <string name="camera">Cámara</string>
    <string name="edit_action">EDITAR</string>
    <string name="share_tittle">Compartir informacion</string>
    <string name="galeria">Galeria</string>
    <string name="percent_simbol">%</string>
    <string name="photo_upload_successfuly">La foto se ha subido correctamente</string>
    <string name="photo_upload_fail">Fallo en la carga de la foto, intentalo nuevamente</string>
    <string name="item_num_req">N °</string>
    <string name="item_amp_req">en amp*</string>
    <string name="item_optional_req">medidas opcionales</string>
    <string name="no_internet">Base de datos desactualizada, no hay internet</string>
    <string name="web_client_id">659280880124-hlnf3n2omapabtdrov0gum0j29npnb0j.apps.googleusercontent.com</string>
    <string name="dialog_delete_photo">¿Queres eliminar la foto?</string>
    <string name="dialog_yes">Si</string>
    <string name="dialog_no">No</string>
    <string name="db_updated">Página actualizada</string>
    <string name="db_update_process">Actualizando...</string>

</resources>