<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_product_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_product_req"
                app:layout_constraintBottom_toTopOf="@id/item_brand_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_product"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="true"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_brand_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_brand_req"
                app:layout_constraintBottom_toTopOf="@id/item_feature1_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/item_product_label"
                app:layout_constraintTop_toBottomOf="@id/item_product_label">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/item_brand"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textAutoComplete|textCapWords"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_feature1_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintEnd_toStartOf="@id/item_feature2_label"
                app:layout_constraintStart_toStartOf="@id/item_product_label"
                app:layout_constraintTop_toBottomOf="@id/item_brand_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_feature1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="true"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_feature2_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_feature1_label"
                app:layout_constraintTop_toBottomOf="@id/item_brand_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_feature2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="true"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_feature3_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_feature3_req"
                app:layout_constraintBottom_toTopOf="@id/item_price_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_type_label"
                app:layout_constraintTop_toBottomOf="@id/item_feature2_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_feature3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_type_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintBottom_toTopOf="@+id/item_price_label"
                app:layout_constraintEnd_toStartOf="@+id/item_feature3_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_feature1_label">

                <AutoCompleteTextView
                    android:id="@+id/item_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item_type_req"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_price_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_price_req"
                app:layout_constraintBottom_toBottomOf="@id/item_owner2_label"
                app:layout_constraintEnd_toStartOf="@id/item_owner2_label"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_owner2_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_owner2_req"
                app:layout_constraintBottom_toTopOf="@id/item_location_label"
                app:layout_constraintEnd_toStartOf="@id/item_owner1_label"
                app:layout_constraintStart_toEndOf="@id/item_price_label"
                app:layout_constraintTop_toBottomOf="@+id/item_type_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_owner2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_owner1_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_owner1_req"
                app:layout_constraintBottom_toTopOf="@id/item_location_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_owner2_label"
                app:layout_constraintTop_toBottomOf="@+id/item_type_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_owner1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_inside_number_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/inside_number_req"
                app:layout_constraintBottom_toBottomOf="@id/item_location_label"
                app:layout_constraintEnd_toStartOf="@+id/item_location_label"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_inside_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_location_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toTopOf="@id/item_status_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_inside_number_label"
                app:layout_constraintTop_toBottomOf="@id/item_price_label"
                app:startIconDrawable="@drawable/ic_location">

                <AutoCompleteTextView
                    android:id="@+id/item_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item_location_req"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_status_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_status_req"
                app:layout_constraintBottom_toTopOf="@+id/item_observations_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_inside_number_label">

                <AutoCompleteTextView
                    android:id="@+id/item_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_observations_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:hint="@string/item_observations_req"
                app:layout_constraintBottom_toTopOf="@+id/recycler_view_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_status_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_observations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/recycler_view_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_between_elements"
                app:layout_constraintBottom_toTopOf="@+id/cancel_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_observations_label">

                <androidx.cardview.widget.CardView
                    style="@style/CardView.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/card_elevation">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/photo_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:clipToPadding="false"
                        android:orientation="horizontal"
                        android:padding="6dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        tools:listitem="@layout/photo_item" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_action"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/save_action"
                app:icon="@drawable/ic_save"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toStartOf="@id/cancel_action"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_action"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filter_cancel"
                app:icon="@drawable/ic_baseline_cancel_24"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/save_action"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/camera_action"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/camera"
                app:icon="@drawable/ic_add_photo_camera"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toStartOf="@id/gallery_action"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cancel_action" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gallery_action"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/galeria"
                app:icon="@drawable/ic_add_photo_file"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/camera_action"
                app:layout_constraintTop_toBottomOf="@id/cancel_action" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>